--- a/org/Tutorial.org
+++ b/org/Tutorial.org
@@ -1506,32 +1506,9 @@
           end 
         #+END_SRC
 *** V1                                                           :deprecated:
-**** Frame to generate the kernel                                 :Technical:
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb :noweb tangle
-          require '/tmp/KSplitOss.rb'
-
-          <<ref-mocks>>
-          <<generate-ref-declaration>>
-          <<def-parameters>>
-          <<ref-init>>
-
-          class KSplitOssRef_v1 < KSplitOss
-          def generate
-            macros = ""
-
-            if @opts[:preprocessor] then
-              $p_vector_length = "VECTOR_SIZE"
-              $p_def_vect = "DEF_VECT"
-              macros = <<EOF
-                #define VECTOR_SIZE #{@opts[:vector_length]}
-          EOF
-            else
-              $p_vector_length = "#{@opts[:vector_length]}"
-              $p_def_vect = "1:#{@opts[:vector_length]}"
-            end
-       #+END_SRC
 **** First nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest1-v1
+        #+BEGIN_SRC ruby
           first_nest = <<EOF
            if( ndime == 2 ) then
 
@@ -1569,7 +1546,8 @@
           EOF
         #+END_SRC
 **** Second nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest2-v1
+        #+BEGIN_SRC ruby
           second_nest = <<EOF
              if( ndime == 2 ) then
 
@@ -1660,7 +1638,8 @@
           EOF
         #+END_SRC
 **** Third nest
-        #+BEGIN_SRC ruby :tangle  /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest3-v1
+        #+BEGIN_SRC ruby
           third_nest = <<EOF
              if( fvins_nsi > 0.9_rp ) then
                 if( ndime == 2 ) then
@@ -1720,7 +1699,8 @@
           EOF
         #+END_SRC
 **** Fourth nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest4-v1
+        #+BEGIN_SRC ruby
           fourth_nest = <<EOF
              if( kfl_lumped == 1 ) then 
                 if( ndime == 2 ) then
@@ -1774,7 +1754,8 @@
           EOF
         #+END_SRC
 **** Fifth nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest5-v1
+        #+BEGIN_SRC ruby
           fifth_nest = <<EOF
              if( ndime == 2 ) then
                 do igaus = 1,pgaus
@@ -1816,7 +1797,8 @@
           EOF
         #+END_SRC
 **** Sixth nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest6-v1
+        #+BEGIN_SRC ruby
           sixth_nest = <<EOF
              do igaus = 1,pgaus
                 do inode = 1,pnode
@@ -1832,7 +1814,8 @@
           EOF
         #+END_SRC
 **** Seventh nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest7-v1
+        #+BEGIN_SRC ruby
           seventh_nest = <<EOF
              if( kfl_limit_nsi == -1 ) then
 
@@ -1871,7 +1854,8 @@
           EOF
         #+END_SRC
 **** Eighth nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest8-v1
+        #+BEGIN_SRC ruby
           eighth_nest = <<EOF
              do igaus = 1,pgaus
                 do idime = 1,ndime
@@ -1881,7 +1865,8 @@
           EOF
         #+END_SRC
 **** Nineth nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest9-v1
+        #+BEGIN_SRC ruby
           nineth_nest = <<EOF
              if( kfl_sgsti_nsi == 1 ) then
                 do igaus = 1,pgaus 
@@ -1896,7 +1881,8 @@
           EOF
         #+END_SRC
 **** Tenth nest
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
+        #+NAME: ref-nest10-v1
+        #+BEGIN_SRC ruby
           tenth_nest = <<EOF
              if( ndime == 2 ) then
                 do igaus = 1,pgaus
@@ -1939,29 +1925,63 @@
 
           EOF
         #+END_SRC
-**** Assembling pieces
-        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb
-          set_lang(FORTRAN)
-          @kernel = CKernel::new(:includes => "immintrin.h")
-          @kernel.procedure = declare_procedure
-          get_output.print macros
-          get_output.print generate_mocks
-          get_output.print generate_ref_declaration
-          get_output.print generate_ref_initialization
-          get_output.print first_nest if @opts[:nests].include? 1
-          get_output.print second_nest if @opts[:nests].include? 2
-          get_output.print third_nest if @opts[:nests].include? 3
-          get_output.print fourth_nest if @opts[:nests].include? 4
-          get_output.print fifth_nest if @opts[:nests].include? 5
-          get_output.print sixth_nest if @opts[:nests].include? 6
-          get_output.print seventh_nest if @opts[:nests].include? 7
-          get_output.print eighth_nest if @opts[:nests].include? 8
-          get_output.print nineth_nest if @opts[:nests].include? 9
-          get_output.print tenth_nest if @opts[:nests].include? 10
-          get_output.print "end subroutine nsi_element_assembly_split_oss"
+**** Frame to generate the kernel                                 :Technical:
+        #+BEGIN_SRC ruby :tangle /tmp/KSplitOssRef_v1.rb :noweb tangle
+          require '/tmp/KSplitOss.rb'
+
+          <<ref-mocks>>
+          <<generate-ref-declaration>>
+          <<def-parameters>>
+          <<ref-init>>
+
+          class KSplitOssRef_v1 < KSplitOss
+          def generate
+            macros = ""
+
+            if @opts[:preprocessor] then
+              $p_vector_length = "VECTOR_SIZE"
+              $p_def_vect = "DEF_VECT"
+              macros = <<EOF
+                #define VECTOR_SIZE #{@opts[:vector_length]}
+          EOF
+            else
+              $p_vector_length = "#{@opts[:vector_length]}"
+              $p_def_vect = "1:#{@opts[:vector_length]}"
+            end
+
+          <<ref-nest1-v1>>
+          <<ref-nest2-v1>>
+          <<ref-nest3-v1>>
+          <<ref-nest4-v1>>
+          <<ref-nest5-v1>>
+          <<ref-nest6-v1>>
+          <<ref-nest7-v1>>
+          <<ref-nest8-v1>>
+          <<ref-nest9-v1>>
+          <<ref-nest10-v1>>
+
+            set_lang(FORTRAN)
+            @kernel = CKernel::new(:includes => "immintrin.h")
+            @kernel.procedure = declare_procedure
+            get_output.print macros
+            get_output.print generate_mocks
+            get_output.print generate_ref_declaration
+            get_output.print generate_ref_initialization
+            get_output.print first_nest if @opts[:nests].include? 1
+            get_output.print second_nest if @opts[:nests].include? 2
+            get_output.print third_nest if @opts[:nests].include? 3
+            get_output.print fourth_nest if @opts[:nests].include? 4
+            get_output.print fifth_nest if @opts[:nests].include? 5
+            get_output.print sixth_nest if @opts[:nests].include? 6
+            get_output.print seventh_nest if @opts[:nests].include? 7
+            get_output.print eighth_nest if @opts[:nests].include? 8
+            get_output.print nineth_nest if @opts[:nests].include? 9
+            get_output.print tenth_nest if @opts[:nests].include? 10
+            get_output.print "end subroutine nsi_element_assembly_split_oss"
           end  
           end
-        #+END_SRC
+       #+END_SRC
+
 *** V2
 **** First nest 
          #+NAME: ref-nest1-v2
